--- a/client/package.json
+++ b/client/package.json
@@ -11,5 +11,8 @@
     "keywords": [],
     "author": "Rahul Parikh",
     "license": "ISC",
-    "description": ""
+    "description": "",
+    "dependencies": {
+        "socket.io-client": "^4.1.2"
+    }
 }
