--- a/server/package.json
+++ b/server/package.json
@@ -11,5 +11,8 @@
     "license": "ISC",
     "devDependencies": {
         "nodemon": "^2.0.7"
+    },
+    "dependencies": {
+        "socket.io": "^4.1.2"
     }
 }
